fixed dataset iterator bug